[package]
authors = ["Tuhin Nair <tuhinnair444@gmail.com>"]
edition = "2018"
name = "rogue"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bracket-lib = "~0.8.1"
legion = "=0.3.1"
ron = "=0.6.1"
serde = {version = "=1.0.115"}

[profile.release]
lto = "thin"
